--- a/index.html
+++ b/index.html
@@ -1,47 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Painter</title>
+	<title>Pokedraw</title>
+	<link rel="stylesheet" href="css/smart-grid.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="css/painter.css" type="text/css" media="screen" title="no title" charset="utf-8">
 </head>
 <body>
 	<!--[if IE]><script src="excanvas.js"></script><![endif]-->
-	<div></div>
-	<div class="left-column">
-
-	</div>
-	<div class="right-column">
-		<canvas width="400" height="400"></canvas>
-		<div class="controls">
-			<ul>
-				<li class="red"></li>
-				<li class="orange"></li>
-				<li class="yellow"></li>
-				<li class="green"></li>
-				<li class="blue"></li>
-				<li class="black selected"></li>
-			</ul>
-			<div id="colorSelect">
-				<span id="newColor"></span>
-				<div class="sliders">
-					<p>
-						<label for="red">Red</label>
-						<input id="red" name="red" type="range" min=0 max=255 value=0>
-					</p>
-					<p>
-						<label for="green">Green</label>
-						<input id="green" name="green" type="range" min=0 max=255 value=0>
-					</p>
-					<p>
-						<label for="blue">Blue</label>
-						<input id="blue" name="blue" type="range" min=0 max=255 value=0>
-					</p>
-				</div>
-				<div>
-					<button id="addNewColor">Add Color</button>
+	<div class="container">
+		<header class="row">
+		</header>
+		<content class="row">
+			<div class="columns five">
+				<canvas width="400" height="400"></canvas>
+			</div>
+			<div class="columns five offset-two">
+				<canvas width="400" height="400"></canvas>
+				<div class="controls">
+					<ul>
+						<li class="red"></li>
+						<li class="orange"></li>
+						<li class="yellow"></li>
+						<li class="light-green"></li>
+						<li class="green"></li>
+						<li class="light-blue"></li>
+						<li class="blue"></li>
+						<li class="purple"></li>
+						<li class="brown"></li>
+						<li class="black selected"></li>
+					</ul>
+					<div id="colorSelect">
+						<span id="newColor"></span>
+						<div class="sliders">
+							<p>
+								<label for="red">Red</label>
+								<input id="red" name="red" type="range" min=0 max=255 value=0>
+							</p>
+							<p>
+								<label for="green">Green</label>
+								<input id="green" name="green" type="range" min=0 max=255 value=0>
+							</p>
+							<p>
+								<label for="blue">Blue</label>
+								<input id="blue" name="blue" type="range" min=0 max=255 value=0>
+							</p>
+						</div>
+						<div>
+							<button id="addNewColor">Add Color</button>
+						</div>
+					</div>
 				</div>
 			</div>
-		</div>
+		</content>
 	</div>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/app.js" type="text/javascript" charset="utf-8"></script>
