--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 		</header>
 		<content class="row">
 			<div class="columns five">
-				<canvas width="400" height="400"></canvas>
+				<div></div>
 			</div>
 			<div class="columns five offset-two">
-				<canvas width="400" height="400"></canvas>
+				<canvas id="canvas" width="400" height="400"></canvas>
 				<div class="controls">
 					<ul>
 						<li class="red"></li>
@@ -55,5 +55,6 @@
 	</div>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/app.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/sketch.min.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
