Implemented a functioning "New Round" button, which pulls a random Pokémon image and starts a countdown timer.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 		<header class="row">
 		</header>
 		<section class="row">
-			<div class="columns five">
+			<div class="left-column columns five">
 				<div id="imageContainer">
 					<!--Image of Pokemon goes here-->
 					<img src="img/150.png">
 				</div>
 			</div>
-			<div class="columns five offset-two">
+			<div class="center-column columns two">
+				<span id="timer">45</span>
+				<button id="newRound">Draw a new Pokemon!</button>
+			</div>
+			<div class="right-column columns five ">
 				<canvas id="canvas" width="400" height="400"></canvas>
 				<div class="controls">
 					<ul>
