Added cursor, Pokemon name, Pokedex object containing the indices and names of all 150.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 					<!--Image of Pokemon goes here-->
 					<img src="img/150.png">
 				</div>
+				<p id="pokemonName"></p>
 			</div>
 			<div class="center-column columns two">
 				<span id="timer">45</span>
@@ -34,6 +35,7 @@
 						<li class="blue"></li>
 						<li class="purple"></li>
 						<li class="brown"></li>
+						<li class="gray"></li>
 						<li class="black selected"></li>
 					</ul>
 					<div id="colorSelect">
@@ -41,15 +43,15 @@
 						<div class="sliders">
 							<p>
 								<label for="red">Red</label>
-								<input id="red" name="red" type="range" min=0 max=255 value=0>
+								<input id="red" name="red" type="range" min=0 max=255 value=255>
 							</p>
 							<p>
 								<label for="green">Green</label>
-								<input id="green" name="green" type="range" min=0 max=255 value=0>
+								<input id="green" name="green" type="range" min=0 max=255 value=190>
 							</p>
 							<p>
 								<label for="blue">Blue</label>
-								<input id="blue" name="blue" type="range" min=0 max=255 value=0>
+								<input id="blue" name="blue" type="range" min=0 max=255 value=227>
 							</p>
 						</div>
 						<div>
