UI/UX Enhancements.

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 			<div class="left-column columns five">
 				<div id="imageContainer">
 					<!--Image of Pokemon goes here-->
-					<img src="img/150.png">
+					<img src="img/whos-that-pokemon.jpg">
 				</div>
 				<p id="pokemonName"></p>
 			</div>
 			<div class="center-column columns two">
-				<button id="newRound">Go!</button>
+				<button id="newRound">Let's Draw!</button>
 				<span id="timer">45</span>
 				<button id="share">Share</button>
 				<a href="#canvas" id="save" data-download="jpeg">Save</a>
@@ -96,7 +96,7 @@
 	</div>
 	<footer>
 		<div class="container">
-			<p>Made by James TW</p>
+			<p>Made by <a href="http://www.jamestw.net">James TW</a></p>
 		</div>
 	</footer>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
