Improve UI responsiveness.

--- a/gallery.html
+++ b/gallery.html
@@ -6,10 +6,12 @@
 	<link rel="stylesheet" href="css/painter.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="css/gallery.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 	<header class="row">
-		<a href="/"><img id="logo" src="img/logo.png"/></a>
+		<a href="index.html"><img id="logo" src="img/logo.png"/></a>
 	</header>
 	<div class="container">
 		<div class="row">
