--- a/gallery.html
+++ b/gallery.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Pokedraw</title>
+	<title>Pokedraw - Gallery</title>
 	<link rel="stylesheet" href="css/smart-grid.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="css/painter.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="css/gallery.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+	<meta name="description=" content="Check out all of the most recent Pokédraws!">
 </head>
 <body>
 	<header class="row">
@@ -21,6 +22,7 @@
 		<section class="gallery row">
 			<!--Here's where drawings get dynamically added on pageload. -->
 		</section>
+		<div id="loader-button-container"></div>
 	</div>
 	<footer>
 		<div class="container">
