--- a/kids.html
+++ b/kids.html
@@ -1,47 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Pokedraw - Draw a Pokémon in 45 seconds!</title>
+	<title>Pokedraw - Kids Version - Draw a Pokémon in 45 seconds!</title>
 	<link rel="stylesheet" href="css/smart-grid.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="css/painter.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui">
-	<meta name="description=" content="Think you can draw a Pokémon? Click here to try it out. It only takes 45 seconds.">
-	<!--For Facebook Sharing-->
-	<meta property="og:title" content="Pokédraw - Draw a Pokémon in 45 seconds!" />
-	<meta property="og:site_name" content="Pokédraw" />
-	<meta property="og:url" content="http://www.jamestw.net/pokedraw/" />
-	<meta property="og:description" content="Think you can draw a Pokémon? Click here to try it out. It only takes 45 seconds." /> 
-	<meta property="og:image" content="http://www.jamestw.net/pokedraw/img/logo-fb-share.png" />
+	<meta name="description=" content="Think you can draw a Pokémon? Click here to try it out. It only takes 45 seconds. (This site is kid friendly!)">
 </head>
 <body>
-	<script> //Facebook sharing script. No malicious intent here! Install Ghostery if you don't want to be tracked. https://www.ghostery.com/
-		window.fbAsyncInit = function() {
-	        FB.init({
-	          appId      : 351920294960632,
-	          xfbml      : true,
-	          version    : 'v2.0'
-	        });
-	      };
-	      (function(d, s, id){
-	         var js, fjs = d.getElementsByTagName(s)[0];
-	         if (d.getElementById(id)) {return;}
-	         js = d.createElement(s); js.id = id;
-	         js.src = "//connect.facebook.net/en_US/sdk.js";
-	         fjs.parentNode.insertBefore(js, fjs);
-	       }(document, 'script', 'facebook-jssdk'));
-	</script>
 
 	<!--[if IE]><script src="excanvas.js"></script><![endif]-->
 
 	<header class="row">
-		<a href="index.html"><img id="logo" src="img/logo.png"/></a>
+		<a href="kids.html"><img id="logo" src="img/logo.png"/></a>
 	</header>
-	<nav>
-		<a href="gallery.html"><span>Gallery</span></a>
-		<a href="kids.html"><span>Kids Version!</span></a>
-	</nav>
 	<div class="container">
 		<div class="row">
 			<h1>You have 45 seconds to draw a random Pok&#xe9;mon.</h1>
@@ -107,13 +81,11 @@
 	</div>
 	<footer>
 		<div class="container">
-			<div id="galleryLink">Visit the <a href="gallery.html">Gallery</a> to see all the drawings!</div><br/>
-			<div id="galleryLink">Parents: There is a <a href="kids.html">kids version</a> where children can play/view safely.</div>
-			<div id="byline">Made by <a href="http://www.jamestw.net">James TW</a></div>
+			<p>Parents, this is a kid friendly version of the site. No drawings from outside sources will be shown on this page (except the 10 original ones I drew).</p>
 		</div>
 	</footer>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/app.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/kids.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/sketch.js" type="text/javascript" charset="utf-8"></script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
