Added a privacy policy and a new purple default color.

--- a/kids.html
+++ b/kids.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Pokedraw - Kids Version - Draw a Pokémon in 45 seconds!</title>
+	<title>Pokedraw - Kids Version - Draw a Pokemon in 45 seconds!</title>
 	<link rel="stylesheet" href="css/smart-grid.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="css/painter.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -85,8 +85,8 @@
 		</div>
 	</footer>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/kids.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/sketch.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/min/kids.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/min/sketch.min.js" type="text/javascript" charset="utf-8"></script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
