--- a/privacy.html
+++ b/privacy.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Pokedraw - Gallery</title>
+	<title>Pokedraw - Privacy Policy</title>
 	<link rel="stylesheet" href="css/smart-grid.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="css/painter.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="css/gallery.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-	<meta name="description=" content="Check out all of the most recent Pokédraws!">
+	<meta name="description=" content="Information on whether Pokedraw uses your data.">
 </head>
 <body>
 	<header class="row">
@@ -16,13 +16,10 @@
 	</header>
 	<div class="container">
 		<div class="row">
-			<h1>Pok&#xe9;draw Gallery</h1>
-			<p>We just hit <strong>200,000</strong> Pokedraws (in six days)! That's awesome! Here is a gallery of the most recent 1000.</p>
+			<h1>Pok&#xe9;draw Privacy Policy</h1>
+			<p>Pokedraw includes Facebook connectivity for the sole purposes of allowing you to share your creations and to share this site. I will <strong>never</strong> sell or share any information that is collected.</p>
+			<p><a href="http://www.jamestw.net/pokedraw/">< Get back to drawing.</a></p>
 		</div>
-		<section class="gallery row">
-			<!--Here's where drawings get dynamically added on pageload. -->
-		</section>
-		<div id="loader-button-container"></div>
 	</div>
 	<footer>
 		<div class="container">
