--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Pokedraw - Draw a Pokémon in 45 seconds!</title>
+	<title>Pokedraw - Draw a Pokemon in 45 seconds!</title>
 	<link rel="stylesheet" href="css/smart-grid.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="css/painter.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -36,7 +36,7 @@
 	<!--[if IE]><script src="excanvas.js"></script><![endif]-->
 
 	<header class="row">
-		<a href="index.html"><img id="logo" src="img/logo.png"/></a>
+		<a href="/"><img id="logo" src="img/logo.png"/></a>
 	</header>
 	<nav>
 		<a href="gallery.html"><span>Gallery</span></a>
@@ -78,6 +78,7 @@
 						<li class="light-blue"></li>
 						<li class="blue"></li>
 						<li class="pink"></li>
+						<li class="purple"></li>
 						<li class="brown"></li>
 						<li class="gray"></li>
 						<li class="black selected"></li>
@@ -108,13 +109,14 @@
 	<footer>
 		<div class="container">
 			<div id="galleryLink">Visit the <a href="gallery.html">Gallery</a> to see all the drawings!</div><br/>
-			<div id="galleryLink">Parents: There is a <a href="kids.html">kids version</a> where children can play/view safely.</div>
+			<div id="galleryLink">Parents: There is a <a href="kids.html">kids version</a> where children can play/view safely.</div><br/>
+			<div id="galleryLink"><a href="kids.html">Privacy policy</a></div>
 			<div id="byline">Made by <a href="http://www.jamestw.net">James TW</a></div>
 		</div>
 	</footer>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/app.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/sketch.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/min/app.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/min/sketch.min.js" type="text/javascript" charset="utf-8"></script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
