--- a/kids.html
+++ b/kids.html
@@ -52,6 +52,7 @@
 						<li class="light-blue"></li>
 						<li class="blue"></li>
 						<li class="pink"></li>
+						<li class="purple"></li>
 						<li class="brown"></li>
 						<li class="gray"></li>
 						<li class="black selected"></li>
