--- a/privacy.html
+++ b/privacy.html
@@ -18,7 +18,7 @@
 		<div class="row">
 			<h1>Pok&#xe9;draw Privacy Policy</h1>
 			<p>Pokedraw includes Facebook connectivity for the sole purposes of allowing you to share your creations and to share this site. I will <strong>never</strong> sell or share any information that is collected.</p>
-			<p><a href="http://www.jamestw.net/pokedraw/">< Get back to drawing.</a></p>
+			<p><a href="http://www.pokedraw.net/">< Get back to drawing.</a></p>
 		</div>
 	</div>
 	<footer>
