Cleaned up homepage. Removed color picker except in kids.html.

--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
 	<div class="container">
 		<div class="row">
 			<h1>Pok&#xe9;draw Gallery</h1>
-			<p>We just hit <strong>200,000</strong> Pokedraws (in six days)! That's awesome! Here is a gallery of the most recent 1000.</p>
+			<p>We just hit <strong>380,000</strong> Pokedraws (in just over a week)! That's awesome! Here is a gallery of the most recent 1000.</p>
 		</div>
 		<section class="gallery row">
 			<!--Here's where drawings get dynamically added on pageload. -->
