--- a/index.html
+++ b/index.html
@@ -93,25 +93,6 @@
 						<li class="gray"></li>
 						<li class="black selected"></li>
 					</ul>
-					<div id="colorSelect">
-						<div>
-							<button id="addNewColor">Add This Color</button>
-						</div>
-						<div class="sliders">
-							<p>
-								<label for="red">Red</label>
-								<input id="red" name="red" type="range" min=0 max=255 value=148>
-							</p>
-							<p>
-								<label for="green">Green</label>
-								<input id="green" name="green" type="range" min=0 max=255 value=109>
-							</p>
-							<p>
-								<label for="blue">Blue</label>
-								<input id="blue" name="blue" type="range" min=0 max=255 value=155>
-							</p>
-						</div>
-					</div>
 				</div>
 			</div>
 		</section>
@@ -123,7 +104,7 @@
 					<div class="footerLink"><a href="gallery.html">Gallery</a> - See all the most recent drawings!</div><br/>
 					<div class="footerLink"><a href="kids.html">Kids version</a> - Where children can play & view safely.</div><br/>
 					<div class="footerLink"><a href="privacy.html">Privacy Policy</a></div></br>
-					<p>230,000 Pokedraws and counting!</p>
+					<p><strong>380,000</strong> Pokedraws and counting!</p>
 				</div>
 				<div class="columns four">
 					<div class="fb-like-box" data-href="https://www.facebook.com/pokedrawdotnet" data-width="150px" data-colorscheme="dark" data-show-faces="false" data-header="false" data-stream="false" data-show-border="false"></div>
