Pokedraw count updated!

--- a/index.html
+++ b/index.html
@@ -15,19 +15,16 @@
 	<meta property="og:description" content="Think you can draw a Pokémon? Click here to try it out. It only takes 45 seconds." /> 
 	<meta property="og:image" content="http://www.jamestw.net/pokedraw/img/logo-fb-share.png" />
 	<style> 
-#panel
-{
-padding:5px;
-text-align:center;
-background-color:#e5eecc;
-border:solid 1px #c3c3c3;
-}
-#panel
-{
-padding:50px;
-display:none;
-}
-</style>
+		#panel
+			{
+			padding:5px;
+			text-align:center;
+			background-color:#e5eecc;
+			border:solid 1px #c3c3c3;
+			padding:50px;
+			display:none;
+			}
+	</style>
 </head>
 <body>
 	<script> //Facebook sharing script. No malicious intent here! Install Ghostery if you don't want to be tracked. https://www.ghostery.com/
@@ -61,6 +58,7 @@ display:none;
 
 	<header class="row">
 		<a href="/"><img id="logo" src="img/logo.png"/></a>
+		<a id="hide-drawings" href="#" title="Hide these drawings">&times;</a>
 	</header>
 	<nav>
 		<a href="gallery.html"><span>Gallery</span></a>
@@ -138,7 +136,7 @@ display:none;
 						<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 						<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 					</form>
-					<p><strong>650,000</strong> Pokedraws and counting!</p>
+					<p><strong>6,500,000</strong> Pokedraws and counting!</p>
 				</div>
 				<div class="columns four">
 					<div class="fb-like-box" data-href="https://www.facebook.com/pokedrawdotnet" data-width="150px" data-colorscheme="dark" data-show-faces="false" data-header="false" data-stream="false" data-show-border="false"></div>
