--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Pokedraw - Draw a Pokemon in 45 seconds!</title>
 	<link rel="stylesheet" href="/css/smart-grid.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="/css/normalize.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="/css/painter.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="/css/icons.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -56,7 +57,18 @@
 		</script>
 
 	<!--[if IE]><script src="excanvas.js"></script><![endif]-->
-
+	<div id="update-modal">
+		<a class="modal-close" href="#">&times;</a>
+		<h1>Recent Updates</h1>
+		<h2>March 2015</h2>
+		<ul>
+			<li>Improved layout on mobile and tablet.</li>
+			<li>Fixed Facebook share button.</li>
+			<li>Removed donation bar.</li>
+			<li>A new Pokemon appeared?!</li>
+		</ul>
+		<h3>More fun new features coming soon!</h3>
+	</div>
 	<header class="row">
 		<a href="/"><img id="logo" src="img/logo.png" alt="Pokedraw"/></a>
 		<a class="header-control refresh-drawings" href="#" title="Refresh recent drawings"><span class="icon-spinner"></span></a>
@@ -64,11 +76,12 @@
 	</header>
 	<nav>
 		<a href="gallery.html"><span>Gallery</span></a>
-		<a href="kids.html"><span>Kids Version!</span></a>
+		<a href="kids.html"><span>Kid Safe Version!</span></a>
+		<a href="#update-modal" class="nav-link-right nav-update"><span>New Updates!</span></a>
 	</nav>
 	<div class="container">
 		<div class="row">
-			<h1>You have 45 seconds to draw a random Pok&#xe9;mon.</h1>
+			<h1 class="title">You have 45 seconds to draw a random Pok&#xe9;mon.</h1>
 		</div>
 		<section class="row">
 			<div class="left-column columns five">
@@ -79,10 +92,10 @@
 				<p id="pokemonName"></p>
 			</div>
 			<div class="center-column columns two">
-				<button id="newRound">Let's Draw!</button>
+				<button id="newRound" class="intro">Let's Draw!</button>
 				<span id="timer">45</span>
-				<button class="share share-fb"><span class="icon-facebook"></span></button>
-				<a class="share share-twitter popup" href="http://twitter.com/share?url=http%3A%2F%2Fpokedraw.net" data-dnt="true"><span class="icon-twitter"></span></a>
+				<button class="share share-facebook"><span class="icon-facebook"></span></button>
+				<a class="share share-twitter" href="http://twitter.com/share?url=http%3A%2F%2Fpokedraw.net" data-dnt="true"><span class="icon-twitter"></span></a>
 				<a href="#canvas" id="save" data-download="jpeg" target="_blank"><span class="icon-disk"></span>Save</a>
 			</div>
 			<div class="right-column columns five ">
@@ -117,7 +130,7 @@
 			<div class="row">
 				<div class="columns eight">
 					<div class="footerLink"><a href="gallery.html">Gallery</a> - See all the most recent drawings!</div><br/>
-					<div class="footerLink"><a href="kids.html">Kids version</a> - Where children can play & view safely.</div><br/>
+					<div class="footerLink"><a href="kids.html">Kid safe version</a> - Where children can play &amp; view safely.</div><br/>
 					<div class="footerLink"><a href="privacy.html">Privacy Policy</a></div></br></br>
 					<form id="dropdownDonateButton" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
 						<input type="hidden" name="cmd" value="_s-xclick">
@@ -126,7 +139,7 @@
 						<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1"><span>if you're having a great time!</span>
 					</form>
 					<p><strong>10,000,000</strong> Pokedraws and counting!</p>
-					<p>Pokémon and all respective names are Trademark & © of Nintendo 1996-2014</p>
+					<p>Pokémon and all respective names are &trade; &amp; &copy; of Nintendo 1996-2015</p>
 				</div>
 				<div class="columns four">
 					<div class="fb-like-box" data-href="https://www.facebook.com/pokedrawdotnet" data-width="150px" data-colorscheme="dark" data-show-faces="false" data-header="false" data-stream="false" data-show-border="false"></div>
