Gallery images improved and saveable
Changed gallery images to background-images, so they no longer break the grid format. They are also now saveable and display the Pokemon's name on hover.

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 	<title>Pokedraw - Gallery</title>
+	<link rel="stylesheet" href="/css/normalize.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="/css/smart-grid.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="/css/painter.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="/css/gallery.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="/css/icons.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
@@ -16,7 +18,7 @@
 	</header>
 	<div class="container">
 		<div class="row">
-			<h1>Pok&#xe9;draw Gallery</h1>
+			<h1 class="title">Pok&#xe9;draw Gallery</h1>
 			<p>There are over <strong>10,000,000</strong> Pokedraws! That's awesome! Here is a gallery of the most recent 1000.</p>
 		</div>
 		<section class="gallery row">
