--- a/public/kids.html
+++ b/public/kids.html
@@ -18,7 +18,7 @@
 	</header>
 	<div class="container">
 		<div class="row">
-			<h1>You have 45 seconds to draw a random Pok&#xe9;mon.</h1>
+			<h1 class="title">You have 45 seconds to draw a random Pok&#xe9;mon.</h1>
 		</div>
 		<section class="row">
 			<div class="left-column columns five">
@@ -29,7 +29,7 @@
 				<p id="pokemonName"></p>
 			</div>
 			<div class="center-column columns two">
-				<button id="newRound">Let's Draw!</button>
+				<button id="newRound" class="intro">Let's Draw!</button>
 				<span id="timer">45</span>
 				<button class="share share-facebook">Share</button>
 				<a href="#canvas" id="save" data-download="jpeg">Save</a>
