Search By Pokemon Support code
Changes to support Search by pokemon

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="/css/icons.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui">
 	<meta name="description=" content="Check out all of the most recent Pokédraws!">
 </head>
 <body>
@@ -20,6 +20,13 @@
 		<div class="row">
 			<h1 class="title">Pok&#xe9;draw Gallery</h1>
 			<p>There are over <strong>10,000,000</strong> Pokedraws! That's awesome! Here is a gallery of the most recent 1000.</p>
+		</div>
+		<div class="row options">
+			<p><span>NEW!&nbsp;-&nbsp;</span>See only drawings of&nbsp;</p>
+			<select class="pokemon-list" name="pokemon-list">
+				<option value="0">Choose a Pokemon...</option>
+				<!-- Dropdown gets populated with a list of all Pokemon on pageload. -->
+			</select>
 		</div>
 		<section class="gallery row">
 			<!--Here's where drawings get dynamically added on pageload. -->
