--- a/public/index.html
+++ b/public/index.html
@@ -62,9 +62,10 @@
 		<h1>Recent Updates</h1>
 		<h2>March 2015</h2>
 		<ul>
+			<li>You can now see the last 1000 drawings of any Pokemon in the <a href="/gallery.html">Gallery!</a></li>
+			<li>Saving drawings is much easier and better.</li>
 			<li>Improved layout on mobile and tablet.</li>
-			<li>Fixed Facebook share button.</li>
-			<li>Removed donation bar.</li>
+			<li>Faster load times!</li>
 			<li>A new Pokemon appeared?!</li>
 		</ul>
 		<h3>More fun new features coming soon!</h3>
@@ -96,7 +97,7 @@
 				<span id="timer">45</span>
 				<button class="share share-facebook"><span class="icon-facebook"></span></button>
 				<a class="share share-twitter" href="http://twitter.com/share?url=http%3A%2F%2Fpokedraw.net" data-dnt="true"><span class="icon-twitter"></span></a>
-				<a href="#canvas" id="save" data-download="jpeg" target="_blank"><span class="icon-disk"></span>Save</a>
+				<a href="#" id="save" download="#"><span class="icon-disk"></span>Save</a>
 			</div>
 			<div class="right-column columns five ">
 				<div id="canvas-container">
