--- a/public/gallery.html
+++ b/public/gallery.html
@@ -2,44 +2,41 @@
 <html>
 <head>
 	<title>Pokedraw - Gallery</title>
-	<link rel="stylesheet" href="/css/normalize.css" type="text/css" media="screen" title="no title" charset="utf-8">
-	<link rel="stylesheet" href="/css/smart-grid.css" type="text/css" media="screen" title="no title" charset="utf-8">
-	<link rel="stylesheet" href="/css/painter.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="/css/pokedraw.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="/css/gallery.css" type="text/css" media="screen" title="no title" charset="utf-8">
-	<link rel="stylesheet" href="/css/icons.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui">
 	<meta name="description=" content="Check out all of the most recent Pokédraws!">
 </head>
 <body>
-	<header class="row">
-		<a href="/"><img id="logo" src="img/logo.png"/></a>
+	<header class="header">
+		<a href="/"><img class="logo" src="img/logo.png"/></a>
 	</header>
 	<div class="container">
-		<div class="row">
-			<h1 class="title">Pok&#xe9;draw Gallery</h1>
-			<p>There are over <strong>10,000,000</strong> Pokedraws! That's awesome! Here is a gallery of the most recent 1000.</p>
+		<div class="hero__container">
+			<h1 class="hero">Pok&#xe9;draw Gallery</h1>
+			<p class="hero__copy">There are over <strong>10,000,000</strong> Pokedraws! That's awesome! Here is a gallery of the most recent 1000.</p>
 		</div>
-		<div class="row options">
-			<p><span>NEW!&nbsp;-&nbsp;</span>See the latest drawings of&nbsp;</p>
-			<select class="pokemon-list" name="pokemon-list">
-				<option value="0">Choose a Pokemon...</option>
+		<section class="sbp">
+			<p class="sbp__header">See the latest drawings of&nbsp;</p>
+			<select class="sbp__dropdown js-sbp__dropdown" name="pokemon-list">
+				<option value="0">Choose a Pok&#xe9;mon...</option>
 				<!-- Dropdown gets populated with a list of all Pokemon on pageload. -->
 			</select>
-		</div>
+		</section>
 		<section class="gallery row">
 			<!--Here's where drawings get dynamically added on pageload. -->
 		</section>
 		<div id="loader-button-container"></div>
 	</div>
-	<footer>
+	<footer class="footer">
 		<div class="container">
-			<div id="byline">Made by <a href="http://jamestw.net">James TW</a></div>
+			<div id="footer__byline">Made by <a href="http://jamestw.net">James TW</a></div>
 		</div>
 	</footer>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="/js/gallery.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/min/gallery.min.js" type="text/javascript" charset="utf-8"></script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
