Refactored Privacy page and Kids footer

--- a/public/kids.html
+++ b/public/kids.html
@@ -67,7 +67,7 @@
 			</div>
 		</section>
 	</div>
-	<footer>
+	<footer class="footer">
 		<div class="container">
 			<p>Parents, this is a kid friendly version of the site. No drawings from outside sources will be shown on this page (except the 10 original ones I drew).</p>
 		</div>
