--- a/public/gallery.html
+++ b/public/gallery.html
@@ -1,52 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Pokedraw - Gallery</title>
-	<link rel="stylesheet" href="/css/pokedraw.css" type="text/css" media="screen" title="no title" charset="utf-8">
-	<link rel="stylesheet" href="/css/gallery.css" type="text/css" media="screen" title="no title" charset="utf-8">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <title>Pokedraw - Gallery</title>
+    <link rel="stylesheet" href="/css/pokedraw.css" type="text/css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="/css/gallery.css" type="text/css" media="screen" title="no title" charset="utf-8">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui">
-	<meta name="description=" content="Check out all of the most recent Pokédraws!">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui">
+    <meta name="description=" content="Check out all of the most recent Pokédraws!">
 </head>
 <body>
-	<header class="header">
-		<a href="/"><img class="logo" src="img/logo.png"/></a>
-	</header>
-	<div class="container">
-		<div class="hero__container">
-			<h1 class="hero">Pok&#xe9;draw Gallery</h1>
-			<p class="hero__copy">There are over <strong>10,000,000</strong> Pokedraws! That's awesome! Here is a gallery of the most recent 1000.</p>
-		</div>
-		<section class="sbp">
-			<p class="sbp__header">See the latest drawings of&nbsp;</p>
-			<select class="sbp__dropdown js-sbp__dropdown" name="pokemon-list">
-				<option value="0">Choose a Pok&#xe9;mon...</option>
-				<!-- Dropdown gets populated with a list of all Pokemon on pageload. -->
-			</select>
-		</section>
-		<section class="gallery row">
-			<!--Here's where drawings get dynamically added on pageload. -->
-		</section>
-		<div id="loader-button-container"></div>
-	</div>
-	<footer class="footer">
-		<div class="container">
-			<div id="footer__byline">Made by <a href="http://jamestw.net">James TW</a></div>
-		</div>
-	</footer>
-	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="/js/min/gallery.min.js" type="text/javascript" charset="utf-8"></script>
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <header class="header">
+        <a href="/"><img class="logo" src="img/logo.png"/></a>
+    </header>
+    <div class="container">
+        <div class="hero__container">
+            <h1 class="hero">Pok&#xe9;draw Gallery</h1>
+            <p class="hero__copy">There are over <strong>10,000,000</strong> Pokedraws! That's awesome! Here is a gallery of the most recent 1000.</p>
+        </div>
+        <section class="sbp">
+            <p class="sbp__header">See the latest drawings of&nbsp;</p>
+            <select class="sbp__dropdown js-sbp__dropdown" name="pokemon-list">
+                <option value="0">Choose a Pok&#xe9;mon...</option>
+                <!-- Dropdown gets populated with a list of all Pokemon on pageload. -->
+            </select>
+        </section>
+        <section class="gallery row">
+            <!--Here's where drawings get dynamically added on pageload. -->
+        </section>
+        <div class="loader__container"></div>
+    </div>
+    <footer class="footer">
+        <div class="container">
+            <div id="footer__byline">Made by <a href="http://jamestw.net">James TW</a></div>
+        </div>
+    </footer>
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/js/min/gallery.min.js" type="text/javascript" charset="utf-8"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	  ga('create', 'UA-52635684-1', 'auto');
-	  ga('send', 'pageview');
+      ga('create', 'UA-52635684-1', 'auto');
+      ga('send', 'pageview');
 
-	</script>
+    </script>
 
 </body>
 </html>
